// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Popover component should render and close Popover based on any element with data-close-menu="true" click and match snapshot 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <button
      aria-expanded="true"
      aria-haspopup="true"
      role="button"
    >
      Trigger
    </button>
    <mock-styled.div
      data-open="true"
      role="menu"
    >
      <mock-styled.div>
        <mock-styled.div
          data-close-menu="true"
          role="menuitem"
        >
          Menu Item
        </mock-styled.div>
        <mock-styled.div
          data-close-menu="false"
          role="menuitem"
        >
          Non closing Menu Item
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </mock-styled.div>
</DocumentFragment>
`;

exports[`Menu Popover component should render and close Popover based on any element with data-close-menu="true" click and match snapshot 2`] = `
<DocumentFragment>
  <mock-styled.div>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      role="button"
    >
      Trigger
    </button>
  </mock-styled.div>
</DocumentFragment>
`;
